--- a/styles/layouts/_grid.scss
+++ b/styles/layouts/_grid.scss
@@ -1,5 +1,6 @@
 /*
 * MOBILE ( < 768px )
+* fixture --------------------------- sm
 * # of columns ---------------------- 4
 * unit ------------------------------ (100% - (5px * 2)) / 4 - 20px
 * gutter ------------------------- 20px
@@ -7,6 +8,7 @@
 * container-size ---------------- 100% - (5px * 2)
 
 * TABLET ( >= 768px )
+* fixture -------------------------- md
 * # of columns ---------------------- 12
 * gutter ------------------------- 20px
 * margin -------------------------- 30px
@@ -14,6 +16,7 @@
 * max-container-size ------------ 960px
 
 * DESKTOP ( >= 1200px )
+* fixture ------------------------- lg
 * # of columns ---------------------- 12
 * unit ------------------------------ 75px
 * gutter ------------------------- 20px
@@ -21,3 +24,34 @@
 * container-size ---------------- 1140px
 * max-container-size ------------ 1140px
 */
+
+$gutter: 20px;
+
+$sm-columns: 4;
+$sm-margin: 5px;
+
+.container {
+  width: 100%;
+  padding: 0 $sm-margin;
+  margin: 0 auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+// .col-sm-1 .col-sm-2 ...
+
+// 속성 선택자
+
+// col- 를 포함하는 모든 class
+[class^='col-'] {
+  padding: 0 $gutter / 2;
+}
+
+@for $i from 1 through $sm-columns {
+  .col-sm-#{$i} {
+    width: $i / $sm-columns * 100%;
+  }
+}
