✨ Create a common mixin: text-style

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,23 +1,13 @@
-// @import './constants/colors';
+@import './constants/colors';
 
-// @import './constants/typography';
+@import './constants/typography';
 
-// @import './base/fonts';
+@import './base/fonts';
 
-// @import './base/normalize';
+@import './base/normalize';
 
-// @import './base/reset';
+@import './base/reset';
 
-// @import './layouts/grid';
+@import './layouts/grid';
 
-@mixin hongsi($color) {
-  color: $color;
-
-  .ic-close {
-    width: 40px;
-  }
-}
-
-p {
-  @include hongsi(red);
-}
+@import './mixins/text-style';
