--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -12,23 +12,9 @@
       @include flexbox(end);
     }
 
-    .gnb-search-button {
+    .gnb-icon-button.is-search {
       margin-right: 4px;
     }
-  }
-
-  &-menu-button {
-    i {
-      color: $blue;
-    }
-  }
-
-  &-icon-button {
-    @include flexbox;
-    width: 32px;
-    height: 32px;
-    font-size: 24px;
-    color: $secondary;
   }
 
   .logo {
