--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -1,4 +1,5 @@
 .gnb {
+  $padding: 8px;
   position: relative;
   border-bottom: 1px solid $border;
 
@@ -22,6 +23,7 @@
 
     a {
       display: block;
+      padding: $padding;
     }
 
     img {
@@ -56,6 +58,10 @@
       position: static;
       margin-right: 32px;
       transform: none;
+
+      a {
+        padding: $padding;
+      }
 
       img {
         height: 24px;
