--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 @import './constants/typography';
 @import './constants/breakpoints';
 @import './constants/box-shadows';
+@import './constants/z-indexes';
 
 @import './base/fonts';
 @import './base/normalize';
@@ -26,6 +27,7 @@
 @import './components/gnb-icon-buttons';
 @import './components/my-menu';
 @import './components/drawer-menu';
+
 @import './layouts/grid';
 @import './layouts/gnb';
 @import './layouts/sidebar';
