--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -4,6 +4,18 @@
 
   position: relative;
 
+  &.is-active {
+    .my-menu-button {
+      border-color: $blue;
+    }
+
+    .my-menu-content {
+      visibility: visible;
+      opacity: 1;
+      transform: translate3d(-50%, 0, 0);
+    }
+  }
+
   &-button {
     width: $button-size;
     height: $button-size;
@@ -16,8 +28,7 @@
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
 
-    &:hover,
-    &.is-active {
+    &:hover {
       border-color: $blue;
     }
 
@@ -32,9 +43,14 @@
   &-content {
     @include pos-center-x;
     top: $button-size + $tooltip-size + 8px;
+    visibility: hidden;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
+    opacity: 0;
+    transition: transform 200ms ease-in-out, opacity 200ms ease-in-out,
+      visibility 200ms ease-in-out;
 
+    transform: translate3d(-50%, -10px, 0);
     &::before,
     &::after {
       @include pos-center-x;
