--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -10,34 +10,32 @@
   &-thumbnail {
     @include pos-center-x;
     bottom: 16px;
+  }
 
-    .thumbnail {
-      &-list {
-        @include flexbox;
-      }
+  .thumbnail-list {
+    @include flexbox;
+  }
 
-      &-item {
-        @include flexbox;
-        margin: 0 4px;
+  .thumbnail-item {
+    @include flexbox;
+    margin: 0 4px;
 
-        &.tns-nav-active {
-          opacity: 1;
-          transform: scale(1.33333);
-        }
+    &.tns-nav-active {
+      opacity: 1;
+      transform: scale(1.33333);
+    }
 
-        button {
-          width: 6px;
-          height: 6px;
-          background-color: $white;
-          border-radius: 50%;
-          opacity: 0.7;
-          transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
-        }
+    button {
+      width: 6px;
+      height: 6px;
+      background-color: $white;
+      border-radius: 50%;
+      opacity: 0.7;
+      transition: transform 100ms ease-in-out, opacity 100ms ease-in-out;
+    }
 
-        img {
-          display: none;
-        }
-      }
+    img {
+      display: none;
     }
   }
 
