--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -47,10 +47,11 @@
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
     opacity: 0;
-    transition: transform 200ms ease-in-out, opacity 200ms ease-in-out,
+    transition: transform 200ms ease-in-out opacity 200ms ease-in-out,
       visibility 200ms ease-in-out;
 
     transform: translate3d(-50%, -10px, 0);
+
     &::before,
     &::after {
       @include pos-center-x;
