--- a/styles/components/_product-section-header.scss
+++ b/styles/components/_product-section-header.scss
@@ -26,14 +26,14 @@
 
   .text-button {
     @include text-style(14, $blue);
-    padding: #{$grid-margin};
+    padding: $grid-margin;
     font-weight: 700;
   }
 
   .icon-button {
     @include flexbox;
-    width: 22px + (#{$grid-margin} * 2);
-    height: 22px + (#{$grid-margin} * 2);
+    width: 22px + ($grid-margin * 2);
+    height: 22px + ($grid-margin * 2);
     font-size: 22px;
     color: $secondary;
 
