--- a/styles/main.scss
+++ b/styles/main.scss
@@ -49,6 +49,7 @@
 @import './components/product-inquiry';
 @import './components/product-shipment';
 @import './components/product-card';
+@import './components/product-recommendation';
 
 @import './layouts/grid';
 @import './layouts/gnb';
