--- a/styles/modules/_prices.scss
+++ b/styles/modules/_prices.scss
@@ -67,6 +67,7 @@
   .amount {
     font-size: 14px;
     font-weight: 400;
+    /*****************************/
     text-decoration: line-through;
     letter-spacing: -0.01em;
   }
