--- a/styles/layouts/_grid.scss
+++ b/styles/layouts/_grid.scss
@@ -8,8 +8,8 @@
     flex-wrap: wrap;
   }
 
-  // col- 를 포함하는 모든 클래스
-
+  // [name="age"] : 속성 선택자
+  // col- 를 포함하는 모든 클래스 
   // col-sm-1 col-sm-2 ...
   [class^='col-'] {
     padding: 0 $gutter / 2;
